--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,16 @@
 
 UNRELEASED:
 
+Version: 4.13.0, Date: 2020-06-04
+- Added the AdBlock "on page" icon
+- Removed the unused 'notification' and 'overlay' survey types
+- Added a 'referrerpolicy' of 'no-referrer' to the image tag used for the Premium image replacement / swap
+- Continue to show the /update page to users that have not seen it.  The /update page lets users know what features have been updated in the last 6 months.
+- Fixed an issue with the 'Add Filter List Subscription' via link click functionality
+- Fixed an issue with the element highlighter in the 'Block an ad on this page' wizard
+- Removed the Romanian filter list
+- Updated translations
+
 Version: 4.12.0, Date: 2020-05-18
 - For Premium users, we've added functionality to allow you to import your own images / photos into AdBlock to be used for image swap.
 - Added a debug message when an error is detected from the PubNub library
