Updated with version: 4.14.0 changes

--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,12 @@
 
 UNRELEASED:
 
+Version: 4.14.0, Date: 2020-06-10
+- Added Aria labels to the social media icons on the AdBlock Options page
+- Added two new 'getadblock.com' development hostnames to the 'bandaids' content script
+- Added the stable MS Edge, and Firefox extension ids so that the debug data logic correctly identifies the extensions as 'stable'
+- Removed unused code from the 'bandaids' content script
+
 Version: 4.13.0, Date: 2020-06-04
 - Added the AdBlock "on page" icon
 - Removed the unused 'notification' and 'overlay' survey types
