Updated with version: 4.15.0 changes

--- a/_locales/en_GB/messages.json
+++ b/_locales/en_GB/messages.json
@@ -179,6 +179,10 @@
     "message": "Back",
     "description": "Back to previous page button"
   },
+  "block_something_else": {
+    "message": "Block something else",
+    "description": "Button text on page 3 of the hiding wizard"
+  },
   "findingads": {
     "message": "Finding ads...\n\nThis'll only take a moment.",
     "description": "'Block an ad' wizard loading message"
