--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -179,6 +179,10 @@
     "message": "Retour",
     "description": "Back to previous page button"
   },
+  "block_something_else": {
+    "message": "Bloquer autre chose",
+    "description": "Button text on page 3 of the hiding wizard"
+  },
   "findingads": {
     "message": "Recherche de publicités...\n\nCela ne prendra qu'un instant.",
     "description": "'Block an ad' wizard loading message"
@@ -1399,6 +1403,10 @@
   },
   "advanced_options2": {
     "message": "Je suis un utilisateur expérimenté, montrez-moi les options avancées",
+    "description": "Checkbox on the 'General' tab of the Options page"
+  },
+  "onpage_messages": {
+    "message": "Autoriser AdBlock à m'afficher des messages sur des pages web avec pertinence",
     "description": "Checkbox on the 'General' tab of the Options page"
   },
   "work_around_hulu_problems": {
@@ -2980,6 +2988,18 @@
   "rate_us": {
     "message": "Notez-nous",
     "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "vpn_coming_soon": {
+    "message": "Découvrez les prochaines nouveautés d'AdBlock",
+    "description": "Text of the tooltip of the rate us button CTA in the Options page."
+  },
+  "join_vpn_waitlist": {
+    "message": "Rejoignez la liste bêta pour un accès anticipé !",
+    "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "adblock_vpn": {
+    "message": "VPN AdBlock",
+    "description": "Text of a Options page lower menu button"
   },
   "youve_blocked_num_ads": {
     "message": "Vous avez bloqué $numBlocked$ publicités !",
