--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -179,6 +179,10 @@
     "message": "Terug",
     "description": "Back to previous page button"
   },
+  "block_something_else": {
+    "message": "Blokkeer iets anders",
+    "description": "Button text on page 3 of the hiding wizard"
+  },
   "findingads": {
     "message": "Advertenties zoeken...\n\nDit is zo gebeurd.",
     "description": "'Block an ad' wizard loading message"
@@ -1399,6 +1403,10 @@
   },
   "advanced_options2": {
     "message": "Ik ben een ervaren gebruiker, toon mij geavanceerde opties",
+    "description": "Checkbox on the 'General' tab of the Options page"
+  },
+  "onpage_messages": {
+    "message": "Laat AdBlock me berichten zien op webpagina's indien relevant",
     "description": "Checkbox on the 'General' tab of the Options page"
   },
   "work_around_hulu_problems": {
@@ -2980,6 +2988,18 @@
   "rate_us": {
     "message": "Beoordeel ons",
     "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "vpn_coming_soon": {
+    "message": "Bekijk wat er binnenkort op stapel staat van AdBlock",
+    "description": "Text of the tooltip of the rate us button CTA in the Options page."
+  },
+  "join_vpn_waitlist": {
+    "message": "Sluit je aan bij de bètalijst voor vroege toegang!",
+    "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "adblock_vpn": {
+    "message": "AdBlock VPN",
+    "description": "Text of a Options page lower menu button"
   },
   "youve_blocked_num_ads": {
     "message": "Je hebt $numBlocked$ advertenties geblokkeerd!",
