--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -179,6 +179,10 @@
     "message": "Voltar",
     "description": "Back to previous page button"
   },
+  "block_something_else": {
+    "message": "Bloquear algo mais",
+    "description": "Button text on page 3 of the hiding wizard"
+  },
   "findingads": {
     "message": "Procurando por anúncios...\n\nIsso só vai levar um momento.",
     "description": "'Block an ad' wizard loading message"
@@ -1399,6 +1403,10 @@
   },
   "advanced_options2": {
     "message": "Sou um usuário avançado, mostre-me as opções avançadas",
+    "description": "Checkbox on the 'General' tab of the Options page"
+  },
+  "onpage_messages": {
+    "message": "Permitir que o AdBlock me mostre mensagens nas páginas quando for relevante",
     "description": "Checkbox on the 'General' tab of the Options page"
   },
   "work_around_hulu_problems": {
@@ -2980,6 +2988,18 @@
   "rate_us": {
     "message": "Avaliar",
     "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "vpn_coming_soon": {
+    "message": "Veja o que estamos preparando para o futuro do AdBlock",
+    "description": "Text of the tooltip of the rate us button CTA in the Options page."
+  },
+  "join_vpn_waitlist": {
+    "message": "Entre na lista beta para obter acesso antecipado!",
+    "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "adblock_vpn": {
+    "message": "AdBlock VPN",
+    "description": "Text of a Options page lower menu button"
   },
   "youve_blocked_num_ads": {
     "message": "Você bloqueou $numBlocked$ anúncios!",
