--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -179,6 +179,10 @@
     "message": "Назад",
     "description": "Back to previous page button"
   },
+  "block_something_else": {
+    "message": "Заблокировать что-нибудь еще",
+    "description": "Button text on page 3 of the hiding wizard"
+  },
   "findingads": {
     "message": "Ищем рекламу...\n\nПодождите секундочку.",
     "description": "'Block an ad' wizard loading message"
@@ -1399,6 +1403,10 @@
   },
   "advanced_options2": {
     "message": "Я опытный пользователь, покажите мне дополнительные параметры",
+    "description": "Checkbox on the 'General' tab of the Options page"
+  },
+  "onpage_messages": {
+    "message": "Разрешить AdBlock показывать важные сообщения на страницах",
     "description": "Checkbox on the 'General' tab of the Options page"
   },
   "work_around_hulu_problems": {
@@ -2980,6 +2988,18 @@
   "rate_us": {
     "message": "Оцените нас",
     "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "vpn_coming_soon": {
+    "message": "Хотите узнать последние новости AdBlock?",
+    "description": "Text of the tooltip of the rate us button CTA in the Options page."
+  },
+  "join_vpn_waitlist": {
+    "message": "Запишитесь на бета-тестирование и получите ранний доступ!",
+    "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "adblock_vpn": {
+    "message": "AdBlock VPN",
+    "description": "Text of a Options page lower menu button"
   },
   "youve_blocked_num_ads": {
     "message": "$numBlocked$ объявл. заблокировано!",
