--- a/_locales/sv/messages.json
+++ b/_locales/sv/messages.json
@@ -179,6 +179,10 @@
     "message": "Tillbaka",
     "description": "Back to previous page button"
   },
+  "block_something_else": {
+    "message": "Blockera något mer",
+    "description": "Button text on page 3 of the hiding wizard"
+  },
   "findingads": {
     "message": "Hittar annonser...\n\nDet tar bara ett ögonblick.",
     "description": "'Block an ad' wizard loading message"
@@ -1399,6 +1403,10 @@
   },
   "advanced_options2": {
     "message": "Jag är en avancerad användare, visa mig avancerade alternativ",
+    "description": "Checkbox on the 'General' tab of the Options page"
+  },
+  "onpage_messages": {
+    "message": "Tillåt AdBlock att visa mig meddelanden på webbplatser när det är relevant",
     "description": "Checkbox on the 'General' tab of the Options page"
   },
   "work_around_hulu_problems": {
@@ -2980,6 +2988,18 @@
   "rate_us": {
     "message": "Betygsätt oss",
     "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "vpn_coming_soon": {
+    "message": "Kolla in vad som kommer snart från AdBlock",
+    "description": "Text of the tooltip of the rate us button CTA in the Options page."
+  },
+  "join_vpn_waitlist": {
+    "message": "Skriv upp dig på betalistan för att få tidig tillgång!",
+    "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "adblock_vpn": {
+    "message": "AdBlock VPN",
+    "description": "Text of a Options page lower menu button"
   },
   "youve_blocked_num_ads": {
     "message": "Du har blockerat $numBlocked$ annonser!",
