--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -179,6 +179,10 @@
     "message": "返回",
     "description": "Back to previous page button"
   },
+  "block_something_else": {
+    "message": "拦截其他内容",
+    "description": "Button text on page 3 of the hiding wizard"
+  },
   "findingads": {
     "message": "正在查找广告...\n\n只需要一点时间。",
     "description": "'Block an ad' wizard loading message"
@@ -1399,6 +1403,10 @@
   },
   "advanced_options2": {
     "message": "我是高级用户，显示高级选项",
+    "description": "Checkbox on the 'General' tab of the Options page"
+  },
+  "onpage_messages": {
+    "message": "允许 AdBlock 在网页上向我显示相关的消息",
     "description": "Checkbox on the 'General' tab of the Options page"
   },
   "work_around_hulu_problems": {
@@ -2980,6 +2988,18 @@
   "rate_us": {
     "message": "评价我们",
     "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "vpn_coming_soon": {
+    "message": "查看 AdBlock 即将推出的功能",
+    "description": "Text of the tooltip of the rate us button CTA in the Options page."
+  },
+  "join_vpn_waitlist": {
+    "message": "加入 Beta 版列表以抢先体验！",
+    "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "adblock_vpn": {
+    "message": "AdBlock VPN",
+    "description": "Text of a Options page lower menu button"
   },
   "youve_blocked_num_ads": {
     "message": "你拦截了 $numBlocked$ 个广告！",
