--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -179,6 +179,10 @@
     "message": "返回",
     "description": "Back to previous page button"
   },
+  "block_something_else": {
+    "message": "阻擋其他項目",
+    "description": "Button text on page 3 of the hiding wizard"
+  },
   "findingads": {
     "message": "尋找廣告……\n\n只需要一下子。",
     "description": "'Block an ad' wizard loading message"
@@ -1399,6 +1403,10 @@
   },
   "advanced_options2": {
     "message": "我是進階使用者，顯示進階選項",
+    "description": "Checkbox on the 'General' tab of the Options page"
+  },
+  "onpage_messages": {
+    "message": "允許 AdBlock 在網頁上顯示相關的訊息",
     "description": "Checkbox on the 'General' tab of the Options page"
   },
   "work_around_hulu_problems": {
@@ -2980,6 +2988,18 @@
   "rate_us": {
     "message": "給我們評價",
     "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "vpn_coming_soon": {
+    "message": "查看 AdBlock 即將推出的功能",
+    "description": "Text of the tooltip of the rate us button CTA in the Options page."
+  },
+  "join_vpn_waitlist": {
+    "message": "加入測試名單以搶先體驗！",
+    "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "adblock_vpn": {
+    "message": "AdBlock VPN",
+    "description": "Text of a Options page lower menu button"
   },
   "youve_blocked_num_ads": {
     "message": "您已阻擋了 $numBlocked$ 則廣告！",
