--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,17 @@
 
 UNRELEASED:
 
+Version: 4.15.0, Date: 2020-06-29
+- Updated translations
+- Removed the functionality to open the /update page
+- Improved the hiding wizard.  It now allows a user to restart the 'hide an element' flow.
+- Fixed an issue with the YouTube channel allow ads feature.  The AdBlock toolbar icon correctly displays the ad blocking status.
+- For Edge users, a "Rate Us" link has been on the AdBlock Options page
+- The extension now correctly identifies the stable Edge version in the AdBlock debug data
+- Added aria labels and roles to the social media icons on the AdBlock Options page
+- Added the AdBlock developement servers to the bandaid code
+- Removed unused code and references to a 'getadblock question'
+
 Version: 4.14.0, Date: 2020-06-10
 - Added Aria labels to the social media icons on the AdBlock Options page
 - Added two new 'getadblock.com' development hostnames to the 'bandaids' content script
