--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -179,6 +179,10 @@
     "message": "Zurück",
     "description": "Back to previous page button"
   },
+  "block_something_else": {
+    "message": "Noch etwas blockieren",
+    "description": "Button text on page 3 of the hiding wizard"
+  },
   "findingads": {
     "message": "Werbung suchen ...\n\nDas dauert nur einen Moment.",
     "description": "'Block an ad' wizard loading message"
@@ -1399,6 +1403,10 @@
   },
   "advanced_options2": {
     "message": "Ich bin ein fortgeschrittener Nutzer, zeigen Sie mir die erweiterten Optionen",
+    "description": "Checkbox on the 'General' tab of the Options page"
+  },
+  "onpage_messages": {
+    "message": "AdBlock erlauben, relevante Nachrichten auf Webseiten anzuzeigen",
     "description": "Checkbox on the 'General' tab of the Options page"
   },
   "work_around_hulu_problems": {
@@ -2980,6 +2988,18 @@
   "rate_us": {
     "message": "Bewerten Sie uns",
     "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "vpn_coming_soon": {
+    "message": "Bald verfügbare Neuerungen von AdBlock entdecken",
+    "description": "Text of the tooltip of the rate us button CTA in the Options page."
+  },
+  "join_vpn_waitlist": {
+    "message": "Auf Beta-Liste für den Early Access eintragen!",
+    "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "adblock_vpn": {
+    "message": "AdBlock VPN",
+    "description": "Text of a Options page lower menu button"
   },
   "youve_blocked_num_ads": {
     "message": "Sie haben $numBlocked$ Werbung geblockt!",
