--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -179,6 +179,10 @@
     "message": "Atrás",
     "description": "Back to previous page button"
   },
+  "block_something_else": {
+    "message": "Bloquear otra cosa",
+    "description": "Button text on page 3 of the hiding wizard"
+  },
   "findingads": {
     "message": "Buscando anuncios...\n\nSolo tardará un momento.",
     "description": "'Block an ad' wizard loading message"
@@ -1399,6 +1403,10 @@
   },
   "advanced_options2": {
     "message": "Soy un usuario avanzado, muéstrame opciones avanzadas",
+    "description": "Checkbox on the 'General' tab of the Options page"
+  },
+  "onpage_messages": {
+    "message": "Permitir que AdBlock me muestre mensajes en sitios web cuando sea relevante",
     "description": "Checkbox on the 'General' tab of the Options page"
   },
   "work_around_hulu_problems": {
@@ -2980,6 +2988,18 @@
   "rate_us": {
     "message": "Puntúanos",
     "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "vpn_coming_soon": {
+    "message": "Echa un vistazo a las próximas novedades de AdBlock",
+    "description": "Text of the tooltip of the rate us button CTA in the Options page."
+  },
+  "join_vpn_waitlist": {
+    "message": "¡Únete a la lista de la beta para disfrutar de acceso adelantado!",
+    "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "adblock_vpn": {
+    "message": "AdBlock VPN",
+    "description": "Text of a Options page lower menu button"
   },
   "youve_blocked_num_ads": {
     "message": "¡Has bloqueado $numBlocked$ anuncios!",
