--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -179,6 +179,10 @@
     "message": "Indietro",
     "description": "Back to previous page button"
   },
+  "block_something_else": {
+    "message": "Blocca qualcos'altro",
+    "description": "Button text on page 3 of the hiding wizard"
+  },
   "findingads": {
     "message": "Ricerca pubblicità...\n\nCi vorrà solo un attimo.",
     "description": "'Block an ad' wizard loading message"
@@ -1399,6 +1403,10 @@
   },
   "advanced_options2": {
     "message": "Sono un utente avanzato, mostrami le opzioni avanzate",
+    "description": "Checkbox on the 'General' tab of the Options page"
+  },
+  "onpage_messages": {
+    "message": "Consenti ad AdBlock di mostrarmi i messaggi sulle pagine web quando sono rilevanti",
     "description": "Checkbox on the 'General' tab of the Options page"
   },
   "work_around_hulu_problems": {
@@ -2980,6 +2988,18 @@
   "rate_us": {
     "message": "Valutaci",
     "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "vpn_coming_soon": {
+    "message": "Guarda cosa ha in serbo AdBlock",
+    "description": "Text of the tooltip of the rate us button CTA in the Options page."
+  },
+  "join_vpn_waitlist": {
+    "message": "Entra nella lista beta per l'accesso anticipato!",
+    "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "adblock_vpn": {
+    "message": "AdBlock VPN",
+    "description": "Text of a Options page lower menu button"
   },
   "youve_blocked_num_ads": {
     "message": "Hai bloccato $numBlocked$ annunci!",
