--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -179,6 +179,10 @@
     "message": "戻る",
     "description": "Back to previous page button"
   },
+  "block_something_else": {
+    "message": "ブロックを実行",
+    "description": "Button text on page 3 of the hiding wizard"
+  },
   "findingads": {
     "message": "広告を探しています...",
     "description": "'Block an ad' wizard loading message"
@@ -1399,6 +1403,10 @@
   },
   "advanced_options2": {
     "message": "上級ユーザーなので、さらなるオプションを表示する",
+    "description": "Checkbox on the 'General' tab of the Options page"
+  },
+  "onpage_messages": {
+    "message": "関連性がある場合、ウェブサイト上にAdBlockによるメッセージ表示を許可する",
     "description": "Checkbox on the 'General' tab of the Options page"
   },
   "work_around_hulu_problems": {
@@ -2980,6 +2988,18 @@
   "rate_us": {
     "message": "評価して下さい",
     "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "vpn_coming_soon": {
+    "message": "AdBlockによる最新情報をチェックしましょう",
+    "description": "Text of the tooltip of the rate us button CTA in the Options page."
+  },
+  "join_vpn_waitlist": {
+    "message": "ベータに登録して早期アクセスに参加！",
+    "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "adblock_vpn": {
+    "message": "AdBlock VPN",
+    "description": "Text of a Options page lower menu button"
   },
   "youve_blocked_num_ads": {
     "message": "$numBlocked$個の広告をブロックしました！",
