Updated with version: 4.16.0 changes

--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,9 @@
 
 UNRELEASED:
 
+Version: 4.16.0, Date: 2020-07-18
+- Updated to ABP Core 3.9.1
+
 Version: 4.15.0, Date: 2020-06-29
 - Updated translations
 - Removed the functionality to open the /update page
