--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,9 @@
 
 UNRELEASED:
 
+Version: 4.18.0, Date: 2020-07-28
+- Updated to ABP Core 3.9.3
+
 Version: 4.17.0, Date: 2020-07-22
 - Added processing to migrate legacy AdBlock Premium users data to the new data structures
 
