Updated with version: 4.20.0 changes

--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,9 @@
 
 UNRELEASED:
 
+Version: 4.20.0, Date: 2020-09-02
+- Added a new feature which allows users to easily add or remove their YouTube subscribed channels to the AdBlock allowlist
+
 Version: 4.19.0, Date: 2020-08-10
 - Fixed an issue with 'hide an ad' wizard when trying to hide certain ads with very long text
 - The AdBlock popup menu has been enhanced to allow a tab id to be provided in a query string.  This will allow us to improve our automated testing.
