--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,15 @@
 
 UNRELEASED:
 
+Version: 4.21.0, Date: 2020-09-17
+- Fixed an issue when subscribing to a filter list via a subscription link
+- Updated the Hungarian filter list URL
+- Updated to ABP Core 3.9.4
+- Fixed an issue when showing status messages on the AdBlock Options page
+- Added the "I don't care about cookies" filter list to the Filter List tab of the AdBlock Options page
+- Fixed an issue with Local CDN feature
+- Removed the Local CDN feature from our Firefox extension
+
 Version: 4.20.0, Date: 2020-09-02
 - Added a new feature which allows users to easily add or remove their YouTube subscribed channels to the AdBlock allowlist
 
