--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -374,7 +374,7 @@
     "description": "Filter lists tab of the Options page: Generic filter list download error message."
   },
   "ab_filters_subscription_lastDownload_invalidData": {
-    "message": "Failed, not a valid filters list",
+    "message": "Failed, not a valid filter list",
     "description": "Filter lists tab of the Options page: Invalid filter list file."
   },
   "ab_filters_subscription_lastDownload_checksumMismatch": {
@@ -1272,6 +1272,20 @@
   "resume_blocking_ads": {
     "message": "Resume blocking ads",
     "description": "Link text to start blocking ads again, displayed immediately after 'AdBlock is paused on this site' or 'AdBlock is paused on all sites'"
+  },
+  "premium_status_msg": {
+    "message": "Supporter Since $date$",
+    "description": "Message shown on the premium tab of the options page when the user is a licensed premium user",
+    "placeholders": {
+      "date": {
+        "content": "$1",
+        "example": "January 2020"
+      }
+    }
+  },
+  "premium_status_short_msg": {
+    "message": "Active",
+    "description": "Message shown on the premium tab of the option page when user is a licensed premium user"
   },
   "unpause_adblock": {
     "message": "Unpause AdBlock",
