Updated with version: 4.22.0 changes

--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,15 @@
 
 UNRELEASED:
 
+Version: 4.22.0, Date: 2020-09-24
+- Updated translations
+- Updated / fixed a few of the themes colors
+- Updated DOM Purify to version 2.0.15
+- Updated to ABP Core 3.9.5
+- Removed the 'onUpdate' logic added for the YouTube Subscribed Channel Allowlist feature
+- Added a AdBlock Premium status indicator to the AdBlock popup menu and options page
+- Fixed an issue with the YouTube Channel Allowlist feature
+
 Version: 4.21.0, Date: 2020-09-17
 - Fixed an issue when subscribing to a filter list via a subscription link
 - Updated the Hungarian filter list URL
