--- a/_locales/sv/messages.json
+++ b/_locales/sv/messages.json
@@ -1273,6 +1273,20 @@
     "message": "Återuppta blockering av annonser",
     "description": "Link text to start blocking ads again, displayed immediately after 'AdBlock is paused on this site' or 'AdBlock is paused on all sites'"
   },
+  "premium_status_msg": {
+    "message": "Supporter sedan $date$",
+    "description": "Message shown on the premium tab of the options page when the user is a licensed premium user",
+    "placeholders": {
+      "date": {
+        "content": "$1",
+        "example": "January 2020"
+      }
+    }
+  },
+  "premium_status_short_msg": {
+    "message": "Aktiv",
+    "description": "Message shown on the premium tab of the option page when user is a licensed premium user"
+  },
   "unpause_adblock": {
     "message": "Sluta pausa AdBlock",
     "description": "Link text to start blocking ads again, displayed immediately after 'AdBlock is paused'"
