--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -1273,6 +1273,20 @@
     "message": "恢復阻擋廣告",
     "description": "Link text to start blocking ads again, displayed immediately after 'AdBlock is paused on this site' or 'AdBlock is paused on all sites'"
   },
+  "premium_status_msg": {
+    "message": "自 $date$成為支持者",
+    "description": "Message shown on the premium tab of the options page when the user is a licensed premium user",
+    "placeholders": {
+      "date": {
+        "content": "$1",
+        "example": "January 2020"
+      }
+    }
+  },
+  "premium_status_short_msg": {
+    "message": "已啟用",
+    "description": "Message shown on the premium tab of the option page when user is a licensed premium user"
+  },
   "unpause_adblock": {
     "message": "取消暫停 AdBlock",
     "description": "Link text to start blocking ads again, displayed immediately after 'AdBlock is paused'"
