Updated with version: 4.22.1 changes

--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,9 @@
 
 UNRELEASED:
 
+Version: 4.22.1, Date: 2020-10-06
+- Improved streaming ad blocking on Twitch
+
 Version: 4.22.0, Date: 2020-09-24
 - Updated translations
 - Updated / fixed a few of the themes colors
