Updated with version: 4.23.0 changes

--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,9 @@
 
 UNRELEASED:
 
+Version: 4.23.0, Date: 2020-10-09
+- Show the /update page to let users know what features have been updated in the last 6 months.
+
 Version: 4.22.1, Date: 2020-10-06
 - Improved streaming ad blocking on Twitch
 
