--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -1907,6 +1907,22 @@
     "message": "Landscapes",
     "description": "The label text for the Landscape switch on the MyAdBlock Options page"
   },
+  "goatchannelswitchlabel": {
+    "message": "Goats",
+    "description": "The label text for the Goats switch on the MyAdBlock Options page"
+  },
+  "oceanchannelswitchlabel": {
+    "message": "Ocean",
+    "description": "The label text for the Ocean switch on the MyAdBlock Options page"
+  },
+  "foodchannelswitchlabel": {
+    "message": "Food",
+    "description": "The label text for the Food switch on the MyAdBlock Options page"
+  },
+  "birdchannelswitchlabel": {
+    "message": "Birds",
+    "description": "The label text for the Birds switch on the MyAdBlock Options page"
+  },
   "customchannelswitchlabel": {
     "message": "Custom",
     "description": "The label text for the Custom Image switch on the MyAdBlock Options page"
