--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,14 @@
 
 UNRELEASED:
 
+Version: 4.24.0, Date: 2020-10-28
+- Added 4 new image categories to the Premium Image Swap feature
+- Continue to show the /update page to users that have not seen it.  The /update page lets users know what features have been updated in the last 6 months.
+- Fixed an issue with the buttons on the AdBlock Options page not set to the correct font family
+- Removed code that was associated with the AdBlock Protect extension
+- Refactored the code so that it now we following the standard naming convention
+- Refactored the code to remove the warning for synchronous AJAX requests
+
 Version: 4.23.0, Date: 2020-10-09
 - Show the /update page to let users know what features have been updated in the last 6 months.
 
